test/e2e/features/agentgateway/rate_limit/local/testdata/common.yaml
kind: Gateway
apiVersion: gateway.networking.k8s.io/v1
metadata:
  name: super-gateway
spec:
  gatewayClassName: agentgateway
  listeners:
    - protocol: HTTP
      port: 8080
      name: http
      allowedRoutes:
        namespaces:
          from: Same
