test/e2e/features/agentgateway/rate_limit/local/testdata/extensionref-rl.yaml
# TODO: add support for extensionref
#apiVersion: agentgateway.dev/v1alpha1
#kind: AgentgatewayPolicy
#metadata:
#  name: route-rl-policy
#spec:
#  traffic:
#    rateLimit:
#      local:
#        - requests: 1
#          unit: Seconds
#          burst: 30
#---
#apiVersion: gateway.networking.k8s.io/v1
#kind: HTTPRoute
#metadata:
#  name: svc-route
#spec:
#  parentRefs:
#    - name: super-gateway
#  hostnames:
#    - "example.com"
#  rules:
#    - backendRefs:
#        - name: simple-svc
#          port: 8080
#      matches:
#      - path:
#          type: PathPrefix
#          value: /path1
#    - backendRefs:
#        - name: simple-svc
#          port: 8080
#      matches:
#      - path:
#          type: PathPrefix
#          value: /path2
#      filters:
#          - type: ExtensionRef
#            extensionRef:
#              group: gateway.kgateway.dev
#              kind: TrafficPolicy
#              name: route-rl-policy
