test/e2e/features/agentgateway/rate_limit/local/testdata/gw-local-rate-limit.yaml
apiVersion: gateway.kgateway.dev/v1alpha1
kind: AgentgatewayPolicy
metadata:
  name: gw-rl-policy
spec:
  targetRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: super-gateway
  traffic:
    rateLimit:
      local:
        - requests: 1
          unit: Seconds
          burst: 300
