test/e2e/features/agentgateway/rate_limit/local/testdata/route-local-rate-limit.yaml
apiVersion: gateway.kgateway.dev/v1alpha1
kind: AgentgatewayPolicy
metadata:
  name: route-rl-policy
spec:
  targetRefs:
  - group: gateway.networking.k8s.io
    kind: HTTPRoute
    name: svc-route
  traffic:
    rateLimit:
      local:
        - requests: 1
          unit: Seconds
          burst: 10
